<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.fabfresh.Home" >

    <AutoCompleteTextView
        android:id="@+id/mobNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/auto_complete"
        android:inputType="number" >

        <requestFocus />
    </AutoCompleteTextView>

    <Button
        android:id="@+id/searchPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/btn_bg"
        android:onClick="searchPic"
        android:text="@string/search_pic"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/newPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/btn_bg"
        android:onClick="newPic"
        android:text="@string/new_pic"
        android:textColor="@color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/showMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/btn_bg"
        android:onClick="showMeDirection"
        android:text="@string/show_direction"
        android:textColor="@color/white"
        android:visibility="gone" />

</LinearLayout>